tests/ui/missing_repr.stderr
error: Enum missing `repr` attribute
 --> tests/ui/missing_repr.rs:3:1
  |
3 | #[bit_parity(even)]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bit_parity` (in Nightly builds, run with -Z macro-backtrace for more info)
